<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activities.EditarFoto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FF0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:onClick="back"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.042"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.523" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/nuevapublicacion"
            android:textColor="#000000"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imgFoto"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#AAAAAA"
                android:src="@drawable/img_prueba"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombreUsuario"
                android:textSize="15sp"
                android:layout_marginStart="25dp"/>

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginStart="25sp"
                android:inputType="none" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/localizacion"
                android:textSize="15sp"
                android:layout_marginStart="25dp"/>

            <EditText
                android:id="@+id/edtLocalizacion"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginStart="25sp"
                android:inputType="none" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp"/>

            <Button
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:textSize="12sp"
                style="@style/botones"
                android:text="@string/establecerLoc"
                android:onClick="abrirMapa"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
            <Button
                android:layout_width="125dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:drawableStart="@drawable/ic_upload"
                android:layout_marginEnd="25sp"
                style="@style/botones"
                android:text="@string/publicar"
                android:onClick="subirFoto"/>



        </LinearLayout>

    </ScrollView>


</LinearLayout>